--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea & Tobias - Wedding in Mandelieu-La-Napoule</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Beautifully+Delicious+Script&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Loading Animation -->
@@ -47,9 +47,14 @@
                 <!-- Expandable Folders -->
                 <div class="folders-container">
                     <!-- Accommodation Folder -->
-                    <div class="folder" data-folder="accommodation">
+                    <div class="folder folder-accommodation" data-folder="accommodation">
                         <div class="folder-header">
-                            <div class="folder-icon">🏨</div>
+                            <div class="folder-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+                                    <polyline points="9,22 9,12 15,12 15,22"/>
+                                </svg>
+                            </div>
                             <h3 class="folder-title">Accommodation</h3>
                             <div class="folder-arrow">›</div>
                         </div>
@@ -68,9 +73,16 @@
                     </div>
 
                     <!-- Travel Folder -->
-                    <div class="folder" data-folder="travel">
+                    <div class="folder folder-travel" data-folder="travel">
                         <div class="folder-header">
-                            <div class="folder-icon">✈️</div>
+                            <div class="folder-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                                    <path d="M21 16v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                                    <circle cx="9" cy="7" r="4"/>
+                                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                                    <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                                </svg>
+                            </div>
                             <h3 class="folder-title">Travel Information</h3>
                             <div class="folder-arrow">›</div>
                         </div>
@@ -95,9 +107,16 @@
                     </div>
 
                     <!-- Agenda Folder -->
-                    <div class="folder" data-folder="agenda">
+                    <div class="folder folder-agenda" data-folder="agenda">
                         <div class="folder-header">
-                            <div class="folder-icon">📅</div>
+                            <div class="folder-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
+                                    <line x1="16" y1="2" x2="16" y2="6"/>
+                                    <line x1="8" y1="2" x2="8" y2="6"/>
+                                    <line x1="3" y1="10" x2="21" y2="10"/>
+                                </svg>
+                            </div>
                             <h3 class="folder-title">Weekend Agenda</h3>
                             <div class="folder-arrow">›</div>
                         </div>
@@ -130,9 +149,13 @@
                     </div>
 
                     <!-- Contact Folder -->
-                    <div class="folder" data-folder="contact">
+                    <div class="folder folder-contact" data-folder="contact">
                         <div class="folder-header">
-                            <div class="folder-icon">📞</div>
+                            <div class="folder-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                                    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+                                </svg>
+                            </div>
                             <h3 class="folder-title">Contact Information</h3>
                             <div class="folder-arrow">›</div>
                         </div>
