Refine design: elegant loading intro and minimalistic hero section
- Apply script font (Beautifully Delicious) to surnames Olsen & Keating
- Create sophisticated Mediterranean color palette (cream, sage, olive tones)
- Add refined typography hierarchy with Cormorant Garamond
- Design elegant loading screen with graceful animations
- Redesign hero section with minimalist South of France aesthetic
- Add 'Join us' invitation and 'Côte d'Azur' tagline
- Improve spacing, breathing room, and visual hierarchy
- Update scroll indicator with explore text
- Optimize responsive design for all screen sizes

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <div id="loading-screen" class="loading-screen">
         <div class="loading-content">
             <div class="loading-text">
-                <h1>Andrea & Tobias</h1>
-                <p>September 11-13, 2025</p>
-                <div class="loading-bar">
-                    <div class="loading-progress"></div>
+                <div class="loading-names">
+                    <span class="first-name">Andrea</span>
+                    <span class="last-name script-font">Olsen</span>
+                    <div class="loading-ampersand">&</div>
+                    <span class="first-name">Tobias</span>
+                    <span class="last-name script-font">Keating</span>
                 </div>
+                <p class="loading-subtitle">Côte d'Azur · September 2025</p>
+                <div class="loading-ornament">✦</div>
             </div>
         </div>
     </div>
@@ -27,12 +31,20 @@
         <section class="hero">
             <div class="hero-overlay"></div>
             <div class="hero-content">
-                <h1 class="hero-title">Andrea Olsen</h1>
+                <div class="hero-invite">Join us</div>
+                <h1 class="hero-name">
+                    <span class="first-name">Andrea</span> <span class="last-name script-font">Olsen</span>
+                </h1>
                 <div class="hero-ampersand">&</div>
-                <h1 class="hero-title">Tobias Keating</h1>
-                <p class="hero-date">September 11-13, 2025</p>
+                <h1 class="hero-name">
+                    <span class="first-name">Tobias</span> <span class="last-name script-font">Keating</span>
+                </h1>
+                <div class="hero-divider"></div>
+                <p class="hero-tagline">A celebration on the Côte d'Azur</p>
+                <p class="hero-date">September 11—13, 2025</p>
                 <p class="hero-location">Mandelieu-La-Napoule, France</p>
                 <div class="scroll-indicator">
+                    <span class="scroll-text">Explore</span>
                     <div class="scroll-arrow"></div>
                 </div>
             </div>
