Refine hero section: add palm tree icon and lighter script font
- Add minimalistic hand-drawn palm tree SVG above 'Join us'
- Make script font (Olsen/Keating) lighter with reduced opacity for minimalism
- Explicitly set Cormorant Garamond for tagline and location
- Update palm tree sizing for responsive design
- Adjust animations timing with new palm tree element

--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
         <section class="hero">
             <div class="hero-overlay"></div>
             <div class="hero-content">
+                <div class="hero-palm">
+                    <svg width="40" height="60" viewBox="0 0 40 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <!-- Palm Tree Trunk -->
+                        <path d="M18 38 C18 38, 17 45, 18 52 C19 45, 18 38, 18 38 M20 38 C20 38, 21 45, 20 52 C19 45, 20 38, 20 38" 
+                              stroke="#a8a99b" stroke-width="1.5" stroke-linecap="round" fill="none"/>
+                        <path d="M18.5 52 L19.5 52 L19.5 58 L18.5 58 Z" fill="#a8a99b"/>
+                        
+                        <!-- Palm Fronds -->
+                        <path d="M19 38 Q15 28 8 20 M19 38 Q12 30 6 25" 
+                              stroke="#a8a99b" stroke-width="1.2" stroke-linecap="round" fill="none"/>
+                        <path d="M19 38 Q23 28 30 20 M19 38 Q26 30 32 25" 
+                              stroke="#a8a99b" stroke-width="1.2" stroke-linecap="round" fill="none"/>
+                        <path d="M19 38 Q19 25 18 15 M19 38 Q20 28 19 18" 
+                              stroke="#a8a99b" stroke-width="1.2" stroke-linecap="round" fill="none"/>
+                        <path d="M19 38 Q10 32 3 28 M19 38 Q8 34 2 32" 
+                              stroke="#a8a99b" stroke-width="1.2" stroke-linecap="round" fill="none"/>
+                        <path d="M19 38 Q28 32 35 28 M19 38 Q30 34 36 32" 
+                              stroke="#a8a99b" stroke-width="1.2" stroke-linecap="round" fill="none"/>
+                    </svg>
+                </div>
                 <div class="hero-invite">Join us</div>
                 <h1 class="hero-name">
                     <span class="first-name">Andrea</span> <span class="last-name script-font">Olsen</span>
