Update loading screen to use wedding-logo.svg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Loading Animation -->
     <div id="loading-screen" class="loading-screen">
         <div class="loading-content">
-            <img src="wedding-logo.png" alt="Andrea & Tobias" class="loading-logo">
+            <img src="wedding-logo.svg" alt="Andrea & Tobias" class="loading-logo">
         </div>
     </div>
 
