Simplify hero section text layout
- Remove tagline 'A celebration on the Côte d'Azur'
- Change date from uppercase to normal case (September instead of SEPTEMBER)
- Add 'Côte d'Azur' as new line below Mandelieu-La-Napoule
- Tighten spacing between date, location, and region
- Update responsive styles for cleaner mobile experience

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <span class="first-name">Tobias</span> <span class="last-name script-font">Keating</span>
                 </h1>
                 <div class="hero-divider"></div>
-                <p class="hero-tagline">A celebration on the Côte d'Azur</p>
                 <p class="hero-date">September 11—13, 2026</p>
                 <p class="hero-location">Mandelieu-La-Napoule, France</p>
+                <p class="hero-region">Côte d'Azur</p>
                 <div class="scroll-indicator">
                     <span class="scroll-text">Explore</span>
                     <div class="scroll-arrow"></div>
