Update wedding details section with French welcome and specific location
- Change title to 'Bienvenue - welcome to our wedding' (adds French touch)
- Update subtitle to 'wedding weekend' instead of 'magical weekend'
- Add specific location 'Mandelieu-la-Napoule' to subtitle
- More informative and welcoming messaging

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <!-- Wedding Details -->
         <section class="wedding-details">
             <div class="container">
-                <h2 class="section-title">Our Wedding Celebration</h2>
-                <p class="section-subtitle">Join us for a magical weekend on the beautiful Côte d'Azur</p>
+                <h2 class="section-title">Bienvenue - welcome to our wedding</h2>
+                <p class="section-subtitle">Join us for a wedding weekend on the beautiful Côte d'Azur, in Mandelieu-la-Napoule.</p>
                 
                 <!-- Expandable Folders -->
                 <div class="folders-container">
