Fix dash and remove italic from section subtitle
- Use proper em-dash (—) in title for straight appearance
- Remove italic styling from subtitle text
- Keep clean, readable typography

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Wedding Details -->
         <section class="wedding-details">
             <div class="container">
-                <h2 class="section-title">Bienvenue - welcome to our wedding</h2>
+                <h2 class="section-title">Bienvenue — welcome to our wedding</h2>
                 <p class="section-subtitle">Join us for a wedding weekend on the beautiful Côte d'Azur, in Mandelieu-la-Napoule.</p>
                 
                 <!-- Expandable Folders -->
