Update Accommodation section with new hotel information
- Replace placeholder hotels with actual nearby hotels
- Add Hotel de la Corniche d'Or, Pullman Cannes Mandelieu
- Add L'Ermitage de L'Oasis, Hotel Casarose
- Include Airbnb option for rental-style accommodation
- Update description to reflect actual wedding venues

--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
                         <div class="folder-content">
                             <div class="folder-text">
                                 <h4>Recommended Hotels</h4>
-                                <p>We've secured special rates at several beautiful hotels in Mandelieu-La-Napoule and Cannes:</p>
+                                <p>There are several beautiful hotels in the Mandelieu-La Napoule area, all conveniently located near our wedding venues for the weekend:</p>
                                 <ul>
-                                    <li><strong>Hotel Napoule Beach</strong> - 5 minutes from venue</li>
-                                    <li><strong>Hotel Martinez</strong> - Cannes, 15 minutes drive</li>
-                                    <li><strong>Villa Saint Exupéry</strong> - Boutique hotel with sea views</li>
+                                    <li><strong>Hotel de la Corniche d'Or</strong></li>
+                                    <li><strong>Pullman Cannes Mandelieu</strong></li>
+                                    <li><strong>L'Ermitage de L'Oasis</strong></li>
+                                    <li><strong>Hotel Casarose</strong></li>
                                 </ul>
-                                <p>Please book directly and mention "Olsen-Keating Wedding" for special rates.</p>
+                                <p>There are also many excellent Airbnb options in the area if you prefer a rental-style accommodation.</p>
                             </div>
                         </div>
                     </div>
