Update Travel Information section with detailed transportation options
- Update travel time: 40 minutes from Nice by car
- Replace generic info with specific transportation options
- Add Uber availability information
- Include detailed train instructions via Cannes
- Mention Saturday shuttle service with more details to follow
- More practical and guest-friendly information

--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
                             <div class="folder-text">
                                 <h4>Getting There</h4>
                                 <p><strong>Nearest Airport:</strong> Nice Côte d'Azur Airport (NCE)</p>
-                                <p>Direct flights available from major European cities. Transfer time to Mandelieu-La-Napoule: 45 minutes by car or taxi.</p>
+                                <p>Mandelieu-La Napoule is approximately 40 minutes from Nice by car.</p>
                                 
-                                <h4>Transportation</h4>
+                                <h4>Transportation Options</h4>
                                 <ul>
-                                    <li>Airport transfers can be arranged</li>
-                                    <li>Car rental available at the airport</li>
-                                    <li>Taxi services: approximately €80-100</li>
-                                    <li>Public transport: Bus 210 from Nice to Cannes, then local bus</li>
+                                    <li>Rental cars are available directly at the airport</li>
+                                    <li>Uber and taxis are easily accessible outside arrivals</li>
+                                    <li><strong>Train:</strong> Take the train to Cannes and transfer to the local line for Mandelieu-La Napoule station, which is located in the town center</li>
                                 </ul>
                                 
                                 <h4>Local Transportation</h4>
-                                <p>Most activities will be within walking distance or we'll provide shuttle services between venues.</p>
+                                <p>Most activities throughout the weekend will be within walking distance.</p>
+                                <p>We will also provide shuttle transportation from the Saturday venue — more details to follow.</p>
                             </div>
                         </div>
                     </div>
