--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
                         <div class="folder-header">
                             <div class="folder-icon">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                                    <circle cx="12" cy="12" r="10"/>
-                                    <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
-                                    <line x1="12" y1="17" x2="12.01" y2="17"/>
+                                    <circle cx="12" cy="12" r="9"/>
+                                    <path d="M12 16v-4"/>
+                                    <circle cx="12" cy="8" r="0.5" fill="currentColor"/>
                                 </svg>
                             </div>
                             <h3 class="folder-title">Additional Information</h3>
