Replace red heart with white heart emoji in footer
- Change ❤️ to 🤍 (white heart emoji)
- Ensures heart displays in white/light color
- Better match with footer styling

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>&copy; 2026 Andrea Olsen & Tobias Keating. Made with ❤️ for our special day.</p>
+            <p>&copy; 2026 Andrea Olsen & Tobias Keating. Made with 🤍 for our special day.</p>
         </footer>
     </div>
 
