--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Andrea & Tobias - Wedding in Mandelieu-La-Napoule</title>
     <!-- Force deployment to show images -->
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Loading Animation -->
@@ -38,7 +38,6 @@
                 <p class="hero-location">Mandelieu-La-Napoule, France</p>
                 <p class="hero-region">Côte d'Azur</p>
                 <div class="scroll-indicator">
-                    <span class="scroll-text">Explore</span>
                     <div class="scroll-arrow"></div>
                 </div>
             </div>
