--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="first-name">Tobias</span> <span class="last-name script-font">Keating</span>
                 </h1>
                 <div class="hero-divider"></div>
-                <p class="hero-date">September 11—13, 2026</p>
+                <p class="hero-date">September 11-13, 2026</p>
                 <p class="hero-location">Mandelieu-La-Napoule, France</p>
                 <p class="hero-region">Côte d'Azur</p>
                 <div class="scroll-indicator">
