Add wedding logo below Bienvenue section
- Add new-wedding-logo.png centered below section subtitle
- Desktop: 300px max-width with elegant opacity
- Mobile: 200px max-width for better proportions
- Creates beautiful divider between intro text and info sections
- Maintains consistent branding throughout the site

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <h2 class="section-title">Bienvenue — welcome to our wedding</h2>
                 <p class="section-subtitle">Join us for a wedding weekend on the beautiful Côte d'Azur, in Mandelieu-la-Napoule.</p>
                 
+                <div class="section-logo">
+                    <img src="new-wedding-logo.png" alt="Andrea & Tobias" class="wedding-logo-img">
+                </div>
+                
                 <!-- Expandable Folders -->
                 <div class="folders-container">
                     <!-- Accommodation Folder -->
