Add Tennis Tournament and Sunbeds sign-up buttons
- Add two new sign-up sections below RSVP
- Tennis Tournament Sign-Up with email link
- Sunbeds Sign-Up with email link
- Maintain consistent styling with RSVP button
- Add elegant dividers between sections
- All three buttons centered and beautifully styled

--- a/index.html
+++ b/index.html
@@ -228,6 +228,14 @@
                     <h3>RSVP</h3>
                     <p>Please respond by August 1st, 2026</p>
                     <a href="mailto:rsvp@andrea-tobias-wedding.com" class="rsvp-button">Send RSVP</a>
+                    
+                    <h3 class="signup-title">Tennis Tournament Sign-Up</h3>
+                    <p>Join us for tennis on Saturday morning</p>
+                    <a href="mailto:tennis@andrea-tobias-wedding.com" class="rsvp-button">Sign Up for Tennis</a>
+                    
+                    <h3 class="signup-title">Sunbeds Sign-Up</h3>
+                    <p>Reserve your spot at the beach on Sunday</p>
+                    <a href="mailto:sunbeds@andrea-tobias-wedding.com" class="rsvp-button">Sign Up for Sunbeds</a>
                 </div>
             </div>
         </section>
