Display names side by side in hero section
- Wrap names in flexbox container for horizontal layout
- Andrea Olsen & Tobias Keating now appear beside each other
- Ampersand positioned elegantly between the names
- Responsive: stacks vertically on mobile devices
- Maintains elegant spacing and alignment
- Better use of horizontal space on desktop

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
                     <img src="palm-tree.png" alt="Palm Tree" class="palm-tree-img">
                 </div>
                 <div class="hero-invite">Join us</div>
-                <h1 class="hero-name">
-                    <span class="first-name">Andrea</span> <span class="last-name script-font">Olsen</span>
-                </h1>
-                <div class="hero-ampersand">&</div>
-                <h1 class="hero-name">
-                    <span class="first-name">Tobias</span> <span class="last-name script-font">Keating</span>
-                </h1>
+                <div class="hero-names-container">
+                    <h1 class="hero-name">
+                        <span class="first-name">Andrea</span> <span class="last-name script-font">Olsen</span>
+                    </h1>
+                    <div class="hero-ampersand">&</div>
+                    <h1 class="hero-name">
+                        <span class="first-name">Tobias</span> <span class="last-name script-font">Keating</span>
+                    </h1>
+                </div>
                 <div class="hero-divider"></div>
                 <p class="hero-date">September 11-13, 2026</p>
                 <p class="hero-location">Mandelieu-La-Napoule, France</p>
