Update tennis tournament text with more information note
- Add 'more information soon' to tennis tournament description
- Add period at end for proper punctuation
- Keeps guests informed about upcoming details

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <h4>Saturday, September 12</h4>
                                 <p><strong>Optional Tennis Tournament</strong><br>
                                 10:00 — Barbossi Tennis Club<br>
-                                Hosted by Tobias (sign-up available)</p>
+                                Hosted by Tobias - more information soon (sign-up available).</p>
                                 
                                 <p><strong>Free Time</strong><br>
                                 Enjoy the beautiful Mandelieu-La Napoule — stroll along the coast, explore nearby mountain paths, or take a quick train ride (two stops) into Cannes.</p>
