Replace remaining em-dashes with straight hyphens
- Changed shuttle transportation dash: venue - more details
- Changed children section dash: beach - we'd love to see
- All dashes now consistently straight hyphens (-)
- Complete consistency across entire website

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 
                                 <h4>Local Transportation</h4>
                                 <p>Most activities throughout the weekend will be within walking distance.</p>
-                                <p>We will also provide shuttle transportation from the Saturday venue — more details to follow.</p>
+                                <p>We will also provide shuttle transportation from the Saturday venue - more details to follow.</p>
                             </div>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                         <div class="folder-content">
                             <div class="folder-text">
                                 <h4>Children</h4>
-                                <p>We love your little ones, but our Friday and Saturday celebrations will be adults-only. Children are, of course, more than welcome to join us on Sunday at the beach — we'd love to see everyone there!</p>
+                                <p>We love your little ones, but our Friday and Saturday celebrations will be adults-only. Children are, of course, more than welcome to join us on Sunday at the beach - we'd love to see everyone there!</p>
                                 
                                 <h4>Dress Code</h4>
                                 <p><strong>Saturday Ceremony & Reception:</strong> Ladies, please avoid stilettos as the venue's deck has small wooden gaps. Thicker heels are recommended.</p>
