--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Wedding Details -->
         <section class="wedding-details">
             <div class="container">
-                <h2 class="section-title">Bienvenue - welcome to our wedding</h2>
+                <h2 class="section-title">Bienvenue <span class="elegant-dash">–</span> welcome to our wedding</h2>
                 <p class="section-subtitle">Join us for a wedding weekend on the beautiful Côte d'Azur, in Mandelieu-la-Napoule.</p>
                 
                 <div class="section-logo">
