--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <h4>Recommended Hotels</h4>
                                 <p>There are several beautiful hotels in the Mandelieu-La Napoule area, all conveniently located near our wedding venues for the weekend:</p>
                                 <ul>
-                                    <li><strong>Hotel de la Corniche d'Or</strong></li>
+                                    <li><strong><a href="https://www.cornichedor.com/en" target="_blank" rel="noopener noreferrer">Hotel de la Corniche d'Or</a></strong></li>
                                     <li><strong>Pullman Cannes Mandelieu</strong></li>
                                     <li><strong>L'Ermitage de L'Oasis</strong></li>
                                     <li><strong>Hotel Casarose</strong></li>
