--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <ul>
                                     <li><strong><a href="https://www.cornichedor.com/en" target="_blank" rel="noopener noreferrer">Hotel de la Corniche d'Or</a></strong></li>
                                     <li><strong><a href="https://www.pullman-mandelieu.com/en/" target="_blank" rel="noopener noreferrer">Pullman Cannes Mandelieu</a></strong></li>
-                                    <li><strong>L'Ermitage de L'Oasis</strong></li>
+                                    <li><strong><a href="https://www.ermitage-oasis.fr/" target="_blank" rel="noopener noreferrer">L'Ermitage de L'Oasis</a></strong></li>
                                     <li><strong>Hotel Casarose</strong></li>
                                 </ul>
                                 <p>There are also many excellent Airbnb options in the area if you prefer a rental-style accommodation.</p>
