Add clickable link to Hotel Casarose - Complete all hotel links
- Added URL link to Hotel Casarose
- Opens in new tab with target='_blank'
- Secure with rel='noopener noreferrer'
- Uses same elegant styling as other hotel links
- Link: https://hotelcasarose.fr/
- All 4 recommended hotels now have clickable links

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                     <li><strong><a href="https://www.cornichedor.com/en" target="_blank" rel="noopener noreferrer">Hotel de la Corniche d'Or</a></strong></li>
                                     <li><strong><a href="https://www.pullman-mandelieu.com/en/" target="_blank" rel="noopener noreferrer">Pullman Cannes Mandelieu</a></strong></li>
                                     <li><strong><a href="https://www.ermitage-oasis.fr/" target="_blank" rel="noopener noreferrer">L'Ermitage de L'Oasis</a></strong></li>
-                                    <li><strong>Hotel Casarose</strong></li>
+                                    <li><strong><a href="https://hotelcasarose.fr/" target="_blank" rel="noopener noreferrer">Hotel Casarose</a></strong></li>
                                 </ul>
                                 <p>There are also many excellent Airbnb options in the area if you prefer a rental-style accommodation.</p>
                             </div>
