--- a/index.html
+++ b/index.html
@@ -89,10 +89,7 @@
                         <div class="folder-header">
                             <div class="folder-icon">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                                    <path d="M21 16v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
-                                    <circle cx="9" cy="7" r="4"/>
-                                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
-                                    <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                                    <path d="M21 16v-2l-8-5V3.5c0-.828-.672-1.5-1.5-1.5S10 2.672 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z"/>
                                 </svg>
                             </div>
                             <h3 class="folder-title">Travel Information</h3>
@@ -202,8 +199,6 @@
                             <div class="folder-icon">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                                     <circle cx="12" cy="12" r="10"/>
-                                    <line x1="12" y1="16" x2="12" y2="12"/>
-                                    <line x1="12" y1="8" x2="12.01" y2="8"/>
                                 </svg>
                             </div>
                             <h3 class="folder-title">Additional Information</h3>
