Change BIENVENUE back to Bienvenue (title case)
- Changed from all caps BIENVENUE to Bienvenue
- Elegant title case with cursive Alex Brush font
- Maintains 6.5rem size for prominence

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Wedding Details -->
         <section class="wedding-details">
             <div class="container">
-                <h2 class="section-title">BIENVENUE<br><span class="section-subtitle-inline">welcome to our wedding</span></h2>
+                <h2 class="section-title">Bienvenue<br><span class="section-subtitle-inline">welcome to our wedding</span></h2>
                 <p class="section-subtitle">Join us for a wedding weekend on the beautiful Côte d'Azur, in Mandelieu-la-Napoule.</p>
                 
                 <div class="section-logo">
