Add RSVP form page with Google Sheets integration
- Create rsvp.html with elegant form matching website design
- Add new-wedding-logo at top of form
- Form fields: name, joining (yes/no), dietary, tennis (3 options), sunbeds (yes/no), message
- Elegant toggle buttons for yes/no and tennis tournament options
- Create rsvp.js with form handling and validation
- Add comprehensive RSVP page styles matching main site aesthetic
- Update all CTA buttons to link to /rsvp (RSVP, Tennis, Sunbeds)
- Create Google Apps Script for Sheets integration
- Add setup instructions in RSVP_SETUP_INSTRUCTIONS.md
- Form submits to Google Sheets with columns matching spreadsheet
- Mobile responsive design
- Success message and form reset after submission

--- a/index.html
+++ b/index.html
@@ -223,15 +223,15 @@
                 <div class="rsvp-section">
                     <h3>RSVP</h3>
                     <p>Please respond by May 31st, 2026</p>
-                    <a href="mailto:rsvp@andrea-tobias-wedding.com" class="rsvp-button">Send RSVP</a>
+                    <a href="/rsvp" class="rsvp-button">Send RSVP</a>
                     
                     <h3 class="signup-title">Tennis Tournament</h3>
                     <p>Join us for tennis on Saturday morning</p>
-                    <a href="mailto:tennis@andrea-tobias-wedding.com" class="rsvp-button">Sign Up for Tennis</a>
+                    <a href="/rsvp" class="rsvp-button">Sign Up for Tennis</a>
                     
                     <h3 class="signup-title">Sunbeds</h3>
                     <p>Reserve your spot at the beach on Sunday</p>
-                    <a href="mailto:sunbeds@andrea-tobias-wedding.com" class="rsvp-button">Sign Up for Sunbeds</a>
+                    <a href="/rsvp" class="rsvp-button">Sign Up for Sunbeds</a>
                 </div>
             </div>
         </section>
