--- a/rsvp.html
+++ b/rsvp.html
@@ -32,7 +32,7 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="dietary">Any dietary considerations (vegan, vegetarian, etc.)</label>
+                    <label for="dietary">Any dietary considerations (vegan, vegetarian, allergies, etc.)</label>
                     <textarea id="dietary" name="dietary" rows="3" placeholder="Please specify any dietary restrictions or allergies"></textarea>
                 </div>
                 
